value stored and displayed

--- a/skillmatch/templates/authentication_app/contact.html
+++ b/skillmatch/templates/authentication_app/contact.html
@@ -23,7 +23,7 @@
             <i class="fa-solid fa-phone"></i>
             <div class="contact-info">
                 <strong>Phone:</strong>
-                <a href="tel:+11234567890">+1 (123) 456-7890</a>
+                <a href="tel:9061449328">9061449328</a>
             </div>
         </div>
 
@@ -32,7 +32,7 @@
             <i class="fa-brands fa-whatsapp"></i>
             <div class="contact-info">
                 <strong>WhatsApp:</strong>
-                <a href="https://wa.me/11234567890" target="_blank">Chat on WhatsApp</a>
+                <a href="https://wa.me/9061449328" target="9061449328">9061449328</a>
             </div>
         </div>
 
@@ -41,7 +41,7 @@
             <i class="fa-brands fa-twitter"></i>
             <div class="contact-info">
                 <strong>Twitter:</strong>
-                <a href="https://twitter.com/dummyusername" target="_blank">@dummyusername</a>
+                <a href="https://twitter.com/skillmatch" target="_blank">@skillmatch</a>
             </div>
         </div>
 
@@ -50,7 +50,7 @@
             <i class="fa-brands fa-facebook"></i>
             <div class="contact-info">
                 <strong>Facebook:</strong>
-                <a href="https://facebook.com/dummyusername" target="_blank">dummyusername</a>
+                <a href="https://facebook.com/skillmatchofficial" target="_blank">skillmatchofficial</a>
             </div>
         </div>
 
@@ -59,7 +59,7 @@
             <i class="fa-brands fa-instagram"></i>
             <div class="contact-info">
                 <strong>Instagram:</strong>
-                <a href="https://instagram.com/dummyusername" target="_blank">@dummyusername</a>
+                <a href="https://instagram.com/skillmatchofficial" target="_blank">@skillmatchofficial</a>
             </div>
         </div>
 
@@ -68,7 +68,7 @@
             <i class="fa-brands fa-telegram"></i>
             <div class="contact-info">
                 <strong>Telegram:</strong>
-                <a href="https://t.me/dummyusername" target="_blank">Chat on Telegram</a>
+                <a href="https://t.me/skillmatchofficial" target="_blank">Chat on Telegram</a>
             </div>
         </div>
     </div>
