--- a/skillmatch/templates/indexcontent/plumber.html
+++ b/skillmatch/templates/indexcontent/plumber.html
@@ -201,7 +201,7 @@
             </div>
             {% endfor %}
 
-            <div class="plumber-card">
+            <!-- <div class="plumber-card">
                 <div class="image-container">
                     <img src="D:\poco m2 pro\2023\Dcim-2023jan\a3be98bbbd924623b99bd29a77145090.jpg" alt="Jane Smith" class="plumber-photo" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
                     <i class="fa-solid fa-water default-icon"></i>
@@ -297,7 +297,7 @@ Sibling.style.display='block';">
                 <p>Area: Dallas</p>
                 <p>Availability: Mon-Fri, 9 AM - 5 PM</p>
                 <button onclick="scheduleAppointment('James Martinez')">Schedule Appointment</button>
-            </div>
+            </div> -->
         </div>
     </div>
 
