--- a/skillmatch/templates/authentication_app/index.html
+++ b/skillmatch/templates/authentication_app/index.html
@@ -4,7 +4,6 @@
     <section class="hero">
         <h1>Find the Right Services, Instantly</h1>
         <p>Skill Match connects you to trusted professionals and businesses in your area. Whether you need repairs, consultations, or services, we've got you covered.</p>
-        <button onclick="window.location.href='login.html'">Get Started</button>
 
     </section>
 
@@ -25,7 +24,7 @@
             <div class="category-card">
                 <i class="fa-solid fa-water"></i>
                 <h3>Plumber</h3>
-                <p>Expert plumbing services for all your water needs.</p>
+                <p>Expert plumbing services for all your water needs.</p><br>
             </div>
             </a>
             
@@ -100,7 +99,7 @@
             <div class="category-card">
                 <i class="fa-solid fa-water"></i>
                 <h3>Well Digger</h3>
-                <p>Reliable well drilling and water supply services.</p>
+                <p>Reliable well drilling and water supply services.</p><br><br>
             </div>
             </a>
             <!-- Plant Keeper -->
@@ -108,7 +107,7 @@
             <div class="category-card">
                 <i class="fa-solid fa-seedling"></i>
                 <h3>Plant Keeper</h3>
-                <p>Expert plant care services to maintain your greenery.</p>
+                <p>Expert plant care services to maintain your greenery.</p><br><br>
             </div>
             </a>
         
@@ -117,7 +116,7 @@
             <div class="category-card">
                 <i class="fa-solid fa-tools"></i>
                 <h3>Welder</h3>
-                <p>Quality welding services for construction, repairs, and more.</p>
+                <p>Quality welding services for construction, repairs, and more.</p><br>
             </div>
             </a>
         </div>
